[tool.poetry]
name = "cb-test"
version = "1.0.2"
description = "Code Build Test App"
authors = ["MK"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"
coverage = "6.4.4"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
